# asset-pilot

./: .gitignore  README.md  Taskfile.yml  pyproject.toml  samconfig.toml  template.yaml
infra/sam/: template.yaml
scripts/: deploy.sh  run_local.sh
src/: requirements.txt
src/app/: __init__.py  main.py
src/app/api/routes/: __init__.py  health.py  property.py
src/app/aws/: __init__.py  clients.py  property_table.py
src/app/core/: settings.py
src/app/models/: property.py
tests/: __init__.py  test_health.py
